tests/type-errors/no_builtin_for_subset.arl
archetype no_builtin_for_subset

variable res : int subset = []

entry exec () {
  effect {
    res := [1; 2; 3]
  }
}
